test/function/error/not_a_function.c
void main(){
    int a;
    a();
}